# photo-classification-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.manual-stage5/: phase5_happy_path.py
.manual-stage7/: classifier_happy_path.py
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: api-design.md  architecture-diagram.md  architecture.md  async-classification.md  testing-and-ci.md
docs/decisions/: ADR-002-classification-service.md  ADR-004-object-storage-choice.md  ADR-006-async-classification-processing.md
frontend/: .dockerignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: accessibility-smoke.spec.ts  keyboard-workflow.spec.ts  responsive-workflow.spec.ts
frontend/e2e/fixtures/: platform-api.ts
frontend/src/: index.css  vite-env.d.ts
infra/docker/: nginx.conf
infra/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
scripts/: smoke_photo_classification_flow.sh  validate_k8s_manifests.py
services/classifier/: Dockerfile
services/main/: Dockerfile  manage.py
specs/001-photo-classification-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  factories.py
tests/contracts/: test_auth_api.py  test_classifier_api.py  test_openapi_docs.py  test_submissions_api.py
tests/safety/: test_classifier_payload_minimization.py  test_data_exposure.py  test_demographic_invariance.py  test_forbidden_trait_outputs.py  test_response_data_minimization.py
(+175 files in other folders)
