[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-classification-platform"
version = "0.1.0"
description = "Django/DRF and FastAPI photo submission classification platform."
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
main = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "djangorestframework-simplejwt>=5.3,<6.0",
  "drf-spectacular>=0.27,<1.0",
  "django-filter>=24.0,<26.0",
  "celery>=5.4,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "boto3>=1.34,<2.0",
  "Pillow>=10.3,<12.0",
  "python-dotenv>=1.0,<2.0",
  "gunicorn>=22.0,<24.0",
  "httpx>=0.27,<1.0",
]
classifier = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "Pillow>=10.3,<12.0",
  "python-dotenv>=1.0,<2.0",
]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-django>=4.8,<5.0",
  "pytest-cov>=5.0,<8.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = [
  "services/main",
  "services/classifier",
  "tests/contracts",
  "tests/safety",
]
python_files = ["test_*.py", "*_test.py"]
pythonpath = [
  "services/main",
  "services/classifier",
]
DJANGO_SETTINGS_MODULE = "config.settings"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services/main", "services/classifier", "tests"]
extend-exclude = [
  "migrations",
  ".manual-stage*",
  ".venv",
  "venv",
  "dist",
  "build",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "DJ",
  "S",
]
ignore = [
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
